[优化] 字符串加密功能对 `Java 6` 的支持 @4ra1n